--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,14 @@
 body {
-	margin: 20px;
+	margin: 160px 20px 20px 20px;
 	background-color: #882480;
 	color: white;
 }
 
 a {
 	color: white;
+	transition: opacity .25s ease-in-out;
+	-moz-transition: opacity .25s ease-in-out;
+	-webkit-transition: opacity .25s ease-in-out;
 }
 
 a:hover {
@@ -19,17 +22,18 @@ a:hover {
 	margin-bottom: 20px;
 }
 
-#navigation li a {
+#navigation a {
 	opacity: 0.2;
-	filter: alpha(opacity = 20);
-	transition: opacity .25s ease-in-out;
-	-moz-transition: opacity .25s ease-in-out;
-	-webkit-transition: opacity .25s ease-in-out;
 }
 
-#navigation li a:hover {
-	opacity: 1;
-	filter: alpha(opacity = 100);
+#about-container {
+	position: fixed;
+	z-index: 10;
+	top: 0px;
+	width: 100%;
+	height: 160px;
+	padding-top: 15px;
+	background-color: #882480;
 }
 
 #about {
@@ -69,49 +73,47 @@ a:hover {
 }
 
 .push-icon {
-	background-image: url("img/push.png");
+	background-image: url("../img/push.png");
 }
 
 .star-icon {
-	background-image: url("img/star.png");
+	background-image: url("../img/star.png");
 }
 
 .follow-icon {
-	background-image: url("img/follow.png");
+	background-image: url("../img/follow.png");
 }
 
 .comment-icon {
-	background-image: url("img/comment.png");
+	background-image: url("../img/comment.png");
 }
 
 .issue-icon {
-	background-image: url("img/issue.png");
+	background-image: url("../img/issue.png");
 }
 
 .pull-icon {
-	background-image: url("img/pull_request.png");
+	background-image: url("../img/pull_request.png");
 }
 
 .fork-icon {
-	background-image: url("img/fork.png");
+	background-image: url("../img/fork.png");
 }
 
-#activitys {
-	margin-top: 10px;
+#site-content {
 }
 
-#activitys li {
+#activities li {
 	padding: 0px 0px 25px 0px;
 	opacity: 0.2;
-	filter: alpha(opacity = 20);
 }
 
-#activitys h1 {
+#activities h1 {
 	margin: 0px 0px 0px 0px;
-	font-size: 54px;
+	font-size: 40px;
 }
 
-#activitys p {
+#activities p {
 	font-size: 18px;
 }
 .activity-meta {
