you know what i mean

--- a/template/activities.hbs
+++ b/template/activities.hbs
@@ -21,7 +21,7 @@
 						</h1>
 						<p>
 							{{#each commits}}
-								{{message}}<br>
+								<a href="{{commitUrl}}">{{message}}</a><br>
 							{{/each}}
 						</p>
 					{{/if}}
