--- a/css/screen.css
+++ b/css/screen.css
@@ -77,11 +77,11 @@ a:hover {
 }
 
 .push-icon {
-	background-image: url("../img/push.png");
+	background-position: 0px -184px; width: 48px; height: 28px;
 }
 
 .star-icon {
-	background-image: url("../img/star.png");
+	background-position: 0px -222px; width: 30px; height: 30px;
 }
 
 .follow-icon {
@@ -132,11 +132,12 @@ a:hover {
 }
 
 .activity-icon {
-	margin-top: 20px;
+	margin-top: 10px;
+	margin-left: auto;
+	margin-right: auto;
+
 	background-repeat: no-repeat;
-	background-position: center;
-	width: 100%;
-	height: 24px;
+	background-image: url("../img/icons.png");
 }
 
 .activity-message {
